@@ -1,5 +1,10 @@
 2011-08-17  Alexandre Ferrieux  <ferrieux@users.sourceforge.net>
 
+	* generic/tclIO.c:  [Bug 2946474] Consistently resume backgrounded
+	* tests/ioCmd.test: flushes+closes when exiting.
+
+2011-08-17  Alexandre Ferrieux  <ferrieux@users.sourceforge.net>
+
 	* doc/interp.n: Document TIP 378's one-way-ness.
 	
 2011-08-17  Don Porter  <dgp@users.sourceforge.net>
